--- a/app/views/shared/_trade_tariff_key_actions.html.erb
+++ b/app/views/shared/_trade_tariff_key_actions.html.erb
@@ -1,5 +1,8 @@
-<% if key.active? %>
-  <%= link_to 'Revoke', revoke_trade_tariff_key_path(key), method: :patch, class: 'govuk-link', data: { confirm: 'Are you sure you want to revoke this Trade Tariff key? This action cannot be undone.' } %>
-<% else %>
-  <%= link_to 'Delete', delete_trade_tariff_key_path(key), method: :delete, class: 'govuk-link govuk-link--warning', data: { confirm: 'Are you sure you want to permanently delete this Trade Tariff key? This action cannot be undone.' } %>
-<% end %>
+<%# TODO: Re-enable when trade_tariff_keys routes are uncommented %>
+<%# <% if key.active? %>
+<%#   <%= link_to 'Revoke', revoke_trade_tariff_key_path(key), method: :patch, class: 'govuk-link', data: { confirm: 'Are you sure you want to revoke this Trade Tariff key? This action cannot be undone.' } %>
+<%# <% else %>
+<%#   <%= link_to 'Delete', delete_trade_tariff_key_path(key), method: :delete, class: 'govuk-link govuk-link--warning', data: { confirm: 'Are you sure you want to permanently delete this Trade Tariff key? This action cannot be undone.' } %>
+<%# <% end %>
+
+<span class="govuk-hint govuk-!-margin-0">No actions available</span>
