--- a/app/views/admin/organisations/index.html.erb
+++ b/app/views/admin/organisations/index.html.erb
@@ -9,6 +9,7 @@
             row.with_cell do
               sort_link_for('Name', 'name', current_column: @sort_column, current_direction: @sort_direction)
             end
+            row.with_cell(text: 'Roles')
             row.with_cell(text: 'Users')
             row.with_cell(text: 'API Keys')
             row.with_cell(text: 'Trade Tariff Keys')
@@ -24,6 +25,13 @@
           table.with_body do |body|
             body.with_row do |row|
               row.with_cell(header: true, text: org.organisation_name)
+              row.with_cell do
+                if org.roles.any?
+                  org.roles.sort_by(&:name).map(&:name).join(', ')
+                else
+                  content_tag(:span, 'None', class: 'govuk-hint')
+                end
+              end
               row.with_cell(text: org.users.count)
               row.with_cell(text: org.api_keys.count)
               row.with_cell(text: org.trade_tariff_keys.count)
