--- a/app/views/trade_tariff_keys/create.html.erb
+++ b/app/views/trade_tariff_keys/create.html.erb
@@ -11,7 +11,7 @@
   end
   summary_list.with_row do |row|
     row.with_key(text: "Secret")
-    row.with_value(text: @trade_tariff_key.secret)
+    row.with_value(text: @client_secret)
   end
   summary_list.with_row do |row|
     row.with_key(text: "Description")
